--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Etch-a-Sketch</title>
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <button id="sizeBtn">Change size</button>
+        </div>
     </body>
 </html>
