--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <title>Etch-a-Sketch</title>
     </head>
     <body>
+        <h1 id="title">Etch-a-Sketch</h1>
         <div class="container">
-            <button id="sizeBtn">Change size</button>
+            <div class="controls left">
+                <button id="sizeBtn">Change size</button>
+            </div>
+            <div class="controls right"></div>
         </div>
     </body>
 </html>
