--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1 id="title">Etch-a-Sketch</h1>
         <div class="container">
             <div class="controls left">
-                <button id="sizeBtn">Change size</button>
+                <button id="clear">Clear</button>
+                <button id="size">Change size</button>
             </div>
             <div class="controls right"></div>
         </div>
