--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1 id="title">Etch-a-Sketch</h1>
         <div class="container">
             <div class="controls left">
+                <button id="color">Color mode</button>
+                <button id="rainbow">Rainbow mode</button>
                 <button id="clear">Clear</button>
                 <button id="size">Change size</button>
             </div>
