--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <button class="activated" id="color">Color mode</button>
                 <button id="rainbow">Rainbow mode</button>
                 <button id="clear">Clear</button>
-                <button id="size">Change size</button>
+                <!-- <button id="size">Change size</button> -->
+                <input type="range" min="1" max="64" value="16" class="slider" id="size" />
             </div>
             <div class="controls right"></div>
         </div>
