--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <button id="rainbow">Rainbow mode</button>
                 <button id="clear">Clear</button>
                 <!-- <button id="size">Change size</button> -->
+                <h2 id="sizeText"></h2>
                 <input type="range" min="1" max="64" value="16" class="slider" id="size" />
             </div>
             <div class="controls right"></div>
