Add preset color tiles, make other color tile change according to input

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
         <h1 id="title">Etch-a-Sketch</h1>
         <div class="container">
             <div class="controls left">
+                <div id="colorContainer">
+                    <div id="colorTiles">
+                        <div class="color" id="black"></div>
+                        <div class="color" id="red"></div>
+                        <div class="color" id="blue"></div>
+                        <div class="color" id="green"></div>
+                        <div class="color" id="yellow"></div>
+                        <div class="color" id="white"></div>
+                    </div>
+                    <div id="colorOther">
+                        <div class="color" id="other"></div>
+                        <input type="text" placeholder="#000000" id="colorInput" />
+                    </div>
+                </div>
                 <button class="activated" id="color">Color mode</button>
                 <button id="rainbow">Rainbow mode</button>
                 <button id="clear">Clear</button>
