Add ability to pick color, including other by input

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <div class="controls left">
                 <div id="colorContainer">
                     <div id="colorTiles">
-                        <div class="color" id="black"></div>
-                        <div class="color" id="red"></div>
-                        <div class="color" id="blue"></div>
-                        <div class="color" id="green"></div>
-                        <div class="color" id="yellow"></div>
-                        <div class="color" id="white"></div>
+                        <div class="color" id="black" data-color="black"></div>
+                        <div class="color" id="red" data-color="red"></div>
+                        <div class="color" id="blue" data-color="blue"></div>
+                        <div class="color" id="green" data-color="green"></div>
+                        <div class="color" id="yellow" data-color="yellow"></div>
+                        <div class="color" id="white" data-color="white"></div>
                     </div>
                     <div id="colorOther">
                         <div class="color" id="other"></div>
