--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="controls left">
                 <div id="colorContainer">
                     <div id="colorTiles">
-                        <div class="color" id="black" data-color="black"></div>
+                        <div class="color" id="black" data-color="#222831"></div>
                         <div class="color" id="red" data-color="red"></div>
                         <div class="color" id="blue" data-color="blue"></div>
                         <div class="color" id="green" data-color="green"></div>
@@ -20,7 +20,7 @@
                         <div class="color" id="white" data-color="white"></div>
                     </div>
                     <div id="colorOther">
-                        <div class="color" id="other"></div>
+                        <div class="color" id="other" data-color="#000000"></div>
                         <input type="text" placeholder="#000000" id="colorInput" />
                     </div>
                 </div>
