--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
             </div>
             <div class="controls right"></div>
         </div>
+        <footer>
+            <div id="copyright">
+                <p>&copy 2023, <a href="https://github.com/MikoZ321">MikoZ321</a></p>
+                <a href="https://github.com/MikoZ321"><img src="./github.svg" alt="github logo" width="20px" height="20px" /></a>
+            </div>
+            <p>Icon by <a href="https://freeicons.io/profile/3">icon king1</a> on <a href="https://freeicons.io">freeicons.io</a></p>
+        </footer>
     </body>
 </html>
