--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="controls left">
                 <div id="colorContainer">
                     <div id="colorTiles">
-                        <div class="color" id="black" data-color="#222831"></div>
+                        <div class="color selected" id="black" data-color="#222831"></div>
                         <div class="color" id="red" data-color="red"></div>
                         <div class="color" id="blue" data-color="blue"></div>
                         <div class="color" id="green" data-color="green"></div>
